--- a/index.html
+++ b/index.html
@@ -8,7 +8,182 @@
 </head>
 
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
 
+body {
+  font-family: 'Ubuntu', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #001f3f; /* Темно-синий фон */
+  margin: 0;
+  overflow-x: hidden; /* Отключить горизонтальную прокрутку */
+  color: white;
+}
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 64px;
+  color: white;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s;
+}
+#overlay.win {
+  background-color: rgba(0, 255, 0, 0.5);
+}
+#overlay.loose {
+  background-color: rgba(255, 0, 0, 0.5);
+}
+#overlay.draw {
+  background-color: rgba(0, 0, 255, 0.5);
+}
+#game {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+button {
+  margin: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 40px;
+  border: none;
+  background-color: #00aaff; /* Голубой цвет кнопок */
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+button:hover {
+  background-color: #0099cc; /* Более темный голубой при наведении */
+}
+#result {
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 20px;
+  text-align: center;
+}
+#images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+#player-choice, #computer-choice {
+  width: 100px;
+  height: 100px;
+  margin: 10px;
+}
+.shake {
+  animation: shake 0.5s;
+  animation-iteration-count: 3;
+}
+@keyframes shake {
+  0% { transform: translateY(0); }
+  25% { transform: translateY(-10px); }
+  50% { transform: translateY(0); }
+  75% { transform: translateY(10px); }
+  100% { transform: translateY(0); }
+}
+#balance-container {
+  font-size: 24px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+#balance {
+  margin-right: 10px;
+  margin-top: 10px;
+}
+#balance img {
+  width: 30px;
+  height: 40px;
+  vertical-align: middle;
+}
+#bet-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+#bet-area input {
+  margin-right: 10px;
+  padding: 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 100px;
+}
+#history {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 40px;
+  border: none;
+  background-color: #00aaff; /* Голубой цвет кнопок */
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+#history:hover {
+  background-color: #0099cc; /* Более темный голубой при наведении */
+}
+#rating-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+  margin-top: 20px;
+  text-align: center;
+  border-radius: 50px;
+}
+
+#rating-image {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+#rating {
+  width: 100%;
+  height: 30px;
+  -webkit-appearance: none;
+  appearance: none;
+  border: none;
+  background-color: #ccc; /* Серая цвет фона шкалы */
+  border-radius: 15px; /* Скругление углов шкалы */
+}
+
+#rating::-webkit-progress-value {
+  background-color: #00aaff; /* Голубой цвет прогресса */
+  border-radius: 15px; /* Скругление углов прогресса */
+}
+
+#rating::-moz-progress-bar {
+  background-color: #00aaff; /* Голубой цвет прогресса */
+  border-radius: 15px; /* Скругление углов прогресса */
+}
+
+#rating-message {
+  margin-top: 10px;
+  font-size: 16px;
+}
+@media (max-width: 600px) {
+  /* Стили для мобильных устройств */
+  #content {
+    padding: 10px; /* Добавить отступы для мобильных устройств */
+  }
+}
 </style>
 
 </head>
@@ -38,7 +213,195 @@
     <p id="rating-message"><span id="current-rating">No rating</span><span id="remaining-games"></span></p>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    let balance = 100;
+let gameHistory = [];
+let wins = 0;
+
+function playGame(playerChoice) {
+  const bet = Number(document.getElementById('bet').value);
+  if (isNaN(bet) || bet < 1 || bet > balance) {
+    const message = languageCheckbox.checked ? 'Please enter a valid bet amount within your balance.' : 'Пожалуйста, введите действительную сумму ставки в пределах вашего баланса.';
+    alert(message);
+    return;
+  }
+
+  const choices = ['rock', 'paper', 'scissors'];
+  const computerChoice = choices[Math.floor(Math.random() * 3)];
+  const playerImage = document.getElementById('player-choice');
+  const computerImage = document.getElementById('computer-choice');
+
+  // Показать камень во время анимации
+  playerImage.src = 'rock.png';
+  computerImage.src = 'rock.png';
+
+  // Добавить анимацию
+  playerImage.classList.add('shake');
+  computerImage.classList.add('shake');
+
+  // Удалить класс анимации и сменить изображения после завершения анимации
+  setTimeout(() => {
+    playerImage.classList.remove('shake');
+    computerImage.classList.remove('shake');
+
+    // Сменить изображения на выбор игрока и компьютера
+    playerImage.src = playerChoice + '.png';
+    computerImage.src = computerChoice + '.png';
+
+    // Определить и показать результат
+    const result = determineWinner(playerChoice, computerChoice);
+    document.getElementById('result').innerText = `You chose ${playerChoice}, computer chose ${computerChoice}. ${result}`;
+
+    // Показать оверлей с результатом
+    showOverlay(result);
+
+    // Обновить баланс в зависимости от результата
+    updateBalance(result, bet);
+
+    // Добавить результат в историю
+    addHistoryItem(playerChoice, computerChoice, result);
+
+    // Увеличить счетчик побед, если игрок выиграл
+    if (result === 'win') {
+      wins++;
+    }
+
+    // Обновить прогресс рейтинга
+    updateRating();
+
+    // Обновить сообщение о рейтинге
+    updateRatingMessage();
+  }, 1500); // 3 * 0.5s = 1.5s
+}
+
+function determineWinner(playerChoice, computerChoice) {
+  if (playerChoice === computerChoice) {
+    return "draw";
+  }
+  if (
+    (playerChoice === 'rock' && computerChoice === 'scissors') ||
+    (playerChoice === 'scissors' && computerChoice === 'paper') ||
+    (playerChoice === 'paper' && computerChoice === 'rock')
+  ) {
+    return "win";
+  } else {
+    return "loose";
+  }
+}
+
+function showOverlay(result) {
+  const overlay = document.getElementById('overlay');
+  overlay.className = result;
+  overlay.innerText = result === "win" ? "Win!" : (result === "loose" ? "Loose!" : "Draw!");
+  overlay.style.visibility = 'visible';
+  overlay.style.opacity = '1';
+  setTimeout(() => {
+    overlay.style.visibility = 'hidden';
+    overlay.style.opacity = '0';
+  }, 1000); // Оверлей будет виден 1 секунду
+}
+
+function updateBalance(result, bet) {
+  if (result === 'win') {
+    balance += bet;
+  } else if (result === 'loose') {
+    balance -= bet;
+  }
+  document.getElementById('balance-amount').innerText = `$${balance}`;
+}
+
+function addHistoryItem(playerChoice, computerChoice, result) {
+  const item = {
+    playerChoice,
+    computerChoice,
+    result,
+    timestamp: new Date().toLocaleString()
+  };
+  gameHistory.push(item);
+  localStorage.setItem('gameHistory', JSON.stringify(gameHistory));
+}
+
+function updateRating() {
+  const rating = document.getElementById('rating');
+  const ratingImage = document.getElementById('rating-image');
+
+  if (wins >= 4) {
+    rating.value = 4;
+    ratingImage.src = 'brilliant.png';
+  } else if (wins >= 3) {
+    rating.value = 3;
+    ratingImage.src = 'gold.png';
+  } else if (wins >= 2) {
+    rating.value = 2;
+    ratingImage.src = 'silver.png';
+  } else if (wins >= 1) {
+    rating.value = 1;
+    ratingImage.src = 'bronze.png';
+  } else {
+    rating.value = 0;
+  }
+}
+
+function updateRatingMessage() {
+  const currentRating = document.getElementById('current-rating');
+  const remainingGames = document.getElementById('remaining-games');
+  if (wins >= 4) {
+    currentRating.textContent = 'Brilliant';
+  } else if (wins >= 3) {
+    currentRating.textContent = 'Gold';
+  } else if (wins >= 2) {
+    currentRating.textContent = 'Silver';
+  } else if (wins >= 1) {
+    currentRating.textContent = 'Bronze';
+  } else {
+    currentRating.textContent = 'No rating';
+  }
+}
+function toggleLanguage(checked) {
+  const englishElements = document.querySelectorAll('.lang-en');
+
+
+  if (checked) {
+    // Скрываем английский текст и показываем русский
+    englishElements.forEach(element => element.style.display = 'none');
+    russianElements.forEach(element => element.style.display = 'block');
+  } else {
+    // Скрываем русский текст и показываем английский
+    englishElements.forEach(element => element.style.display = 'block');
+    russianElements.forEach(element => element.style.display = 'none');
+  }
+
+  // Сохраняем состояние чекбокса в localStorage
+  localStorage.setItem('language', checked ? 'en' : 'ru');
+
+  // Обновляем все текстовые элементы
+  updateTextElements();
+}
+
+// Проверяем состояние чекбокса при загрузке страницы
+window.onload = function() {
+  const language = localStorage.getItem('language') || 'en';
+  const languageCheckbox = document.getElementById('language');
+  languageCheckbox.checked = language === 'en';
+  toggleLanguage(languageCheckbox.checked);
+};
+
+// Функция для обновления всех текстовых элементов
+function updateTextElements() {
+  const englishElements = document.querySelectorAll('.lang-en');
+  const russianElements = document.querySelectorAll('.lang-ru');
+
+  if (languageCheckbox.checked) {
+    // Скрываем английский текст и показываем русский
+    englishElements.forEach(element => element.style.display = 'none');
+    russianElements.forEach(element => element.style.display = 'block');
+  } else {
+    // Скрываем русский текст и показываем английский
+    englishElements.forEach(element => element.style.display = 'block');
+    russianElements.forEach(element => element.style.display = 'none');
+  }
+}
+  </script>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
