--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ button:hover {
   <div id="overlay"></div>
   <button id="history" onclick="window.location.href='history.html'">View history</button>
   <button onclick="window.location.href='withdraw.html'">Withdraw</button>
+  <button onclick="window.location.href='energy.html'">ENERY DROP</button>
   <div id="rating-container">
     <img id="rating-image" src="bronze.png" alt="Rating Image">
     <progress id="rating" value="0" max="40"></progress>
