--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 button {
   margin: 5px;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 12px;
   border-radius: 40px;
   border: none;
   background-color: #00aaff; /* Голубой цвет кнопок */
@@ -70,7 +70,7 @@ button:hover {
 #energybutton {
   margin: 5px;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 12px;
   border-radius: 40px;
   border: none;
   background-color: #00aaff;
@@ -149,7 +149,7 @@ button:hover {
 #history {
   margin-top: 20px;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 12x;
   border-radius: 40px;
   border: none;
   background-color: #00aaff; /* Голубой цвет кнопок */
@@ -203,7 +203,6 @@ button:hover {
   </div>
   <p id="result"></p>
   <div id="overlay"></div>
-
 
 <footer>
     <div id="menu">
