--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ button:hover {
 }
 #balance img {
   width: 30px;
-  height: 40px;
+  height: 30px;
   vertical-align: middle;
 }
 
@@ -183,8 +183,7 @@ button:hover {
 </header>
 <body>
   <div id="balance-container">
-    <div id="balance">Balance: <span id="balance-amount">100</span><img id="money-icon" src="money.png" alt="Деньги"></div>
-    <div id="balance">Energy: <span id="balance-amount">10</span><img id="energy-icon" src="energy.png" alt="Energy Icon"></div>
+    <div id="balance">Balance: <span id="balance-amount">100</span><img id="money-icon" src="ton.png" alt="Деньги"></div>
   </div>
   <div id="bet-area">
     <input type="range" id="bet" min="1" max="100" value="1">
@@ -206,10 +205,8 @@ button:hover {
 
 <footer>
     <div id="menu">
-      <button id="energybutton" onclick="window.location.href='energy.html'">ENERGY DROP⚡</button>
       <button id="tasksbutton" onclick="window.location.href='tasks.html'">Tasks✔️</button>
       <button id="history" onclick="window.location.href='history.html'">History📈</button>
-      <button onclick="window.location.href='withdraw.html'">Withdraw💼</button>
     </div>
 </footer>
 
