задний фон звезды

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #161c26; /* Темно-синий фон */
   margin: 0;
   overflow-x: hidden; /* Отключить горизонтальную прокрутку */
   color: white;
+  background: url('background.gif') no-repeat center center fixed;
+  background-size: 30%;
+  
 }
 #overlay {
   position: fixed;
