задний фон звезды просто фотка

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ body {
   margin: 0;
   overflow-x: hidden; /* Отключить горизонтальную прокрутку */
   color: white;
-  background: url('background.gif') no-repeat center center fixed;
-  background-size: 30%;
+  background: url('background.jpg');
+  background-size: 35%;
   
 }
 #overlay {
@@ -67,18 +67,6 @@ button {
 }
 button:hover {
   background-color: #5bd6ff; /* Более темный голубой при наведении */
-}
-
-#energybutton {
-  margin: 5px;
-  padding: 10px 20px;
-  font-size: 12px;
-  border-radius: 40px;
-  border: none;
-  background-color: #00aaff;
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s;
 }
 
 #result {
