--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
   overflow-x: hidden; /* Отключить горизонтальную прокрутку */
   color: white;
   background: url('background.jpg');
-  background-size: cover;
+  background-size: 50%;
   
 }
 #overlay {
