--- a/history.html
+++ b/history.html
@@ -16,6 +16,8 @@
       margin: 0;
       overflow-x: hidden; /* Отключить горизонтальную прокрутку */
       color: white;
+      background: url('background.jpg');
+      background-size: 80%;
     }
     #history {
       width: 100%;
