--- a/tasks.html
+++ b/tasks.html
@@ -18,6 +18,8 @@
     margin: 0;
     overflow-x: hidden; /* Отключить горизонтальную прокрутку */
     color: white;
+    background: url('background.jpg');
+    background-size: 80%;
   }
 </style>
 <body>
