--- a/history.html
+++ b/history.html
@@ -5,20 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game History</title>
   <style>
-    body {
-      font-family: 'Ubuntu', Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: #161c26; /* Темно-синий фон */
-      margin: 0;
-      overflow-x: hidden; /* Отключить горизонтальную прокрутку */
-      color: white;
-      background: url('background.jpg');
-      background-size: 80%;
-    }
+body {
+  font-family: 'Ubuntu', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #161c26; /* Темно-синий фон */
+  margin: 0;
+  overflow-x: hidden; /* Отключить горизонтальную прокрутку */
+  color: white;
+  background: url('background.jpg') no-repeat center center fixed;
+  background-size: 80%;
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  filter: blur(5px); /* Добавляем размытие */
+  z-index: -1; /* Помещаем псевдоэлемент под контент */
+}
     #history {
       width: 100%;
       max-width: 500px;
