--- a/index.html
+++ b/index.html
@@ -20,9 +20,20 @@ body {
   margin: 0;
   overflow-x: hidden; /* Отключить горизонтальную прокрутку */
   color: white;
-  background: url('background.jpg');
+  background: url('background.jpg') no-repeat center center fixed;
   background-size: 80%;
-  
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  filter: blur(5px); /* Добавляем размытие */
+  z-index: -1; /* Помещаем псевдоэлемент под контент */
 }
 #overlay {
   position: fixed;
