--- a/tasks.html
+++ b/tasks.html
@@ -18,9 +18,21 @@
     margin: 0;
     overflow-x: hidden; /* Отключить горизонтальную прокрутку */
     color: white;
-    background: url('background.jpg');
-    background-size: 80%;
-  }
+    background: url('background.jpg') no-repeat center center fixed;
+  background-size: 80%;
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  filter: blur(5px); /* Добавляем размытие */
+  z-index: -1; /* Помещаем псевдоэлемент под контент */
+}
 </style>
 <body>
   <h1>Coming later...</h1>
