размер заднего фона

--- a/tasks.html
+++ b/tasks.html
@@ -19,7 +19,7 @@
     overflow-x: hidden; /* Отключить горизонтальную прокрутку */
     color: white;
     background: url('background.jpg') no-repeat center center fixed;
-  background-size: 100%;
+  background-size: cover;
 }
 
 body::before {
