--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
   overflow-x: hidden; /* Отключить горизонтальную прокрутку */
   color: white;
   background: url('background.jpg') no-repeat center center fixed;
-  background-size: 100%;
+  background-size: cover;
 }
 
 body::before {
